<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp">

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/commentDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_date_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content" />

        <ImageButton
            android:id="@+id/commentOptionsBtn"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-7dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/layout_divider_description"
            android:paddingEnd="-12dp"
            android:src="@drawable/ic_options"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content"
            tools:ignore="TouchTargetSizeCheck" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@color/theme_colour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commentDateText"
            tools:layout_editor_absoluteY="4dp" />

        <RelativeLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider1">

            <ImageButton
                android:id="@+id/upVoteBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/up_vote_comment_description"
                android:src="@drawable/ic_thumb_up"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/numVotesText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/upVoteBtn"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <ImageButton
                android:id="@+id/downVoteBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_toEndOf="@+id/numVotesText"
                android:background="@android:color/transparent"
                android:contentDescription="@string/down_vote_description"
                android:src="@drawable/ic_thumb_down"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </RelativeLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@color/theme_colour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout"
            tools:layout_editor_absoluteY="4dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>