...
            android:paddingTop="4dp"
            android:paddingEnd="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragmentContainerViewPost">

            <EditText
                android:id="@+id/txtComment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="0.30"
                android:background="@drawable/new_comment_et"
                android:hint="@string/write_a_comment"
...
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                android:inputType="textMultiLine"
                android:autofillHints="" />

            <ImageButton
                android:id="@+id/postCommentBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/post_comment_description"
                android:src="@drawable/ic_add_comment_40"
...
