<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/postCardView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp">

        <TextView
            android:id="@+id/postDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_date_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/postOptionsBtn"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-7dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/post_options_description"
            android:paddingEnd="-12dp"
            android:src="@drawable/ic_options"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <View
            android:id="@+id/dividerTop"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@color/theme_colour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/postDateText"
            tools:layout_editor_absoluteY="4dp" />

        <TextView
            android:id="@+id/postTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_title_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postDateText" />

        <TextView
            android:id="@+id/postContentText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="6"
            android:padding="4dp"
            android:text="@string/post_content_placeholder"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/postTitleText" />

        <TextView
            android:id="@+id/continueReadingTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="-4dp"
            android:contentDescription="@string/continue_reading_description"
            android:text="@string/continue_reading"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/postContentText" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@color/theme_colour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/postContentText"
            tools:layout_editor_absoluteY="4dp" />

        <RelativeLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <ImageButton
                android:id="@+id/commentBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/see_comments_description"
                android:src="@drawable/ic_comment"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/numCommentsText"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white" />

            <ImageButton
                android:id="@+id/upVoteBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/commentBtn"
                android:background="@android:color/transparent"
                android:contentDescription="@string/up_vote_post_description"
                android:src="@drawable/ic_thumb_up"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/numVotesText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/upVoteBtn"
                android:gravity="center_vertical"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <ImageButton
                android:id="@+id/downVoteBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_toEndOf="@+id/numVotesText"
                android:background="@android:color/transparent"
                android:contentDescription="@string/down_vote_post_description"
                android:src="@drawable/ic_thumb_down"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/optionsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg"
            android:gravity="end"
            android:orientation="vertical"
            android:padding="2dp"
            android:visibility="invisible"
            android:clickable="true"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/postOptionsBtn"
            android:focusable="true">

            <TextView
                android:id="@+id/editPostBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/edit"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <View
                android:layout_width="70dp"
                android:layout_height="1dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@color/theme_colour"/>

            <TextView
                android:id="@+id/deletePostBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/delete"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>