<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.anonApp.anon.NewPostFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical">

        <EditText
            android:id="@+id/titleInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="Title"
            android:ems="10"
            android:hint="@string/title_required"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/contentInput"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="top"
            android:hint="@string/what_do_you_want_to_say_required"
            android:inputType="textMultiLine"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:ignore="TextContrastCheck"
            android:autofillHints="" />

        <Button
            android:id="@+id/publishPostBtn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-8dp"
            android:layout_marginBottom="2dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/done"
            app:cornerRadius="0dp" />
    </LinearLayout>

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/shadow"
        android:clickable="true"
        android:translationZ="-1dp"
        android:alpha="0"
        android:focusable="true" />
</FrameLayout>