...
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:focusable="true"/>

        <ImageButton
            android:id="@+id/newPostBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.30"
            android:background="@android:color/transparent"
            android:contentDescription="@string/new_post_description"
            android:src="@drawable/ic_add" />
...
